@@ -1,13 +1,13 @@
 # Created by Jevoom
 #
 # 25-Jul-2012
-#     Annotated to help debug key issues
+#     further annotations
 
 module Jerbil
-  # version set to 0.99.11
-  Version = '0.99.11'
+  # version set to 0.99.12
+  Version = '0.99.12'
   # date set to 25-Jul-2012
   Version_Date = '25-Jul-2012'
-  #ident string set to: jerbil-0.99.11 25-Jul-2012
-  Ident = 'jerbil-0.99.11 25-Jul-2012'
+  #ident string set to: jerbil-0.99.12 25-Jul-2012
+  Ident = 'jerbil-0.99.12 25-Jul-2012'
 end
